--- a/scoreKeeper.html
+++ b/scoreKeeper.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Score Keeper</title>
+	<link rel="stylesheet" type="text/css" href="scoreKeeper.css">
 </head>
 <body>
-
+<h1>Score Keeper</h1>
 <h1><span id = "p1Display">0</span> to <span id = "p2Display">0</span></h1>
 
-<p>Playing to: 5</p>
+<p>Playing to: <span>5</span></p>
 
 <input type="number" name="">
 <button id="p1">Player One</button>
